# mix-it-up

./: README.md  pyproject.toml
miucommands/commands/: Beat Saber DRM Webhook.miucommand  Beat Saber How To Request.miucommand  Lurk.miucommand
miucommands/events/: Chat Message Received.miucommand
requests/: commands.py  models.py
scripts/: add_song.bat  query_song.bat  request_regex.py
src/commands/: skip_tts.py
