[project]
name = "mix-it-up"
version = "0.1.0"
description = "Various scripts for the Mix It Up bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
]

[tool.rye]
virtual = true

[tool.rye.scripts]
request = { call = "requests.commands:add_song" }
info = { call = "requests.commands:query_song" }
